--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -120,7 +120,7 @@ Done by @Kerollmops in #3571.
 
 ## Improve relevancy and search performance
 
-v1.2 brings a massive refactor of the search engine that brings perforance and relevancy improvements. Also, one of the major benefits of this refactoring is the ability to explore and integrate new features related to the search in the future releases. Stay tuned!
+v1.2 brings a massive refactor of the search engine that brings perforance and relevancy improvements. Also, one of the major benefits of this refactoring is the ability to explore and integrate new features related to the search customization in the future releases. Stay tuned!
 
 Most of the points linked below can be really technical. If you have any questions or unexpected behaviors on your side, feel free to [reach us](https://github.com/meilisearch/meilisearch/discussions).
 
