Add changes following the new merged PRs

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -189,15 +189,17 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
   * Remove CLI changes for clippy (#3464) @dureuill
   * Improve docker cache in CIs (#3566) @inductor
   * Remove Uffizzi because not used by the team (#3694) @curquiza
+  * Add SDKs test in a CI (#3709) @curquiza
+  * Use new bors URL of our self hosted bors instance (#3721) @curquiza
 * Documentation
   * Add a newline after the meilisearch version in the issue template (#3636) @bidoubiwa
   * Add sprint issue to the template issues (#3643) @curquiza
   * Update the prototype section in CONTRIBUTING.md (#3649) @curquiza
-  * Update README to reference new docs website (#3666) @guimachiavelli
+  * Update README to reference new docs website (#3666, #3710, #3718 and #3720) @guimachiavelli @roy9495 @Kerollmops @curquiza
 * Misc
   * Milli scope: for a settings update, check to see if the primary key actually changes before erroring out (#3608) @GregoryConrad
   * Remove the unused snapshot files (#3696) @irevoire
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, and @jlucktay.
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jlucktay and @roy9495.
 - [Charabia](https://github.com/meilisearch/charabia): @akeamc, @DrAliRagab, @goodhoko, and @mosuka.
