--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -191,6 +191,7 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
   * Remove Uffizzi because not used by the team (#3694) @curquiza
   * Add SDKs test in a CI (#3709) @curquiza
   * Use new bors URL of our self hosted bors instance (#3721) @curquiza
+  * Improve index-scheduler tests (#3639) @Sufflope
 * Documentation
   * Add a newline after the meilisearch version in the issue template (#3636) @bidoubiwa
   * Add sprint issue to the template issues (#3643) @curquiza
@@ -201,5 +202,5 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
   * Remove the unused snapshot files (#3696) @irevoire
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jlucktay and @roy9495.
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jlucktay, @roy9495, and @Sufflope.
 - [Charabia](https://github.com/meilisearch/charabia): @akeamc, @DrAliRagab, @goodhoko, and @mosuka.
