Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -148,13 +148,13 @@ Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 
 ## Automated task deletion
 
-Definitely fixes for #3622: Meilisearch does not have any issue anymore enqueuing new tasks when the DB is full. How? Meilisearch now has a limit (1M) to the maximum number of tasks the task queue can hold.
+Maximum number of tasks the task queue can hold now limited to 1M. Fixes issues with enqueuing new tasks when the database is full.
 
-Once the task queue reaches this limit (1M of tasks are in the task queue, whatever their status is), a task deletion will be scheduled and try to delete the oldest 100k tasks. If the 100k tasks can't be deleted due to some of them being unfinished, we will delete as many tasks as possible.
-If the limit is reached, you’ll still be able to register new tasks. The engine will only stop you from adding new tasks once the hard limit of 10GiB of tasks is reached (that’s between 5M and 15M of tasks depending on your workflow).
+Once the task queue reaches this limit, Meilisearch will try to delete the oldest 100k tasks. If not all 100k tasks can be deleted due to some of them being unfinished, we will delete as many tasks as possible.
 
-Technically, Meilisearch won't enqueue a task unless it can guarantee it will be processed right away.
-In case of issue, for example if the automated task deletion doesn’t delete anything, it won't enqueue any more tasks and log a warning for the user to know that the engine is not working properly.
+You’ll still be able to register new tasks even after reaching this limit. The engine will only stop you from adding new tasks once the hard limit of 10GiB of tasks is reached (that’s between 5M and 15M of tasks depending on your workflow).
+
+If automated deletion fails to delete anything, Meilisearch will log a warning notifying the user the engine is not working properly and no tasks were enqueued.
 
 Done by @irevoire in #3693.
 
