--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -167,7 +167,7 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
 
 ## Other improvements
 
-* Add the support of boolean for CSV documents (#3576) @irevoire
+* Add boolean support for CSV documents (#3576) @irevoire
 * Improve geo sort errors during sorting and filtering (#3638 and #3631) @cymruu
 
 # Fixes 🐞
