Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -183,23 +183,23 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
   * Update clippy toolchain from v1.67 to v1.69 (#3695) @curquiza
   * Bump GitHub actions dependencies: #3554, #3551, #3552, #3553, #3633
 * CIs and tests
-  * Add scheduled test to Actions for all features (#3510) @jlucktay
+  * Add scheduled tests for all features to Actions (#3510) @jlucktay
   * Clean CI file names (#3567) @curquiza
   * Enable cache again in test suite CI (#3587) @curquiza
   * Remove CLI changes for clippy (#3464) @dureuill
   * Improve docker cache in CIs (#3566) @inductor
-  * Remove Uffizzi because not used by the team (#3694) @curquiza
-  * Add SDKs test in a CI (#3709) @curquiza
-  * Use new bors URL of our self hosted bors instance (#3721) @curquiza
+  * Remove Uffizzi because the team no longer uses it (#3694) @curquiza
+  * Add SDK tests to CI (#3709) @curquiza
+  * Use URL of our self-hosted bors instance (#3721) @curquiza
   * Improve index-scheduler tests (#3639) @Sufflope
 * Documentation
-  * Add a newline after the meilisearch version in the issue template (#3636) @bidoubiwa
-  * Add sprint issue to the template issues (#3643) @curquiza
+  * Add newline after the meilisearch version in the issue template (#3636) @bidoubiwa
+  * Add sprint issue to template issues (#3643) @curquiza
   * Update the prototype section in CONTRIBUTING.md (#3649) @curquiza
   * Update README to reference new docs website (#3666, #3710, #3718 and #3720) @guimachiavelli @roy9495 @Kerollmops @curquiza
 * Misc
-  * Milli scope: for a settings update, check to see if the primary key actually changes before erroring out (#3608) @GregoryConrad
-  * Remove the unused snapshot files (#3696) @irevoire
+  * Milli scope: when updating settings, check if primary key actually changes before throwing an error (#3608) @GregoryConrad
+  * Remove unused snapshot files (#3696) @irevoire
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jlucktay, @roy9495, and @Sufflope.
