--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -111,7 +111,7 @@ Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
   - A single term is now limited to 150 possible typo matches for queries containing 1 typo, and to 50 possibilities for queries containing 2 typos
   - Both single word or multi word queries consider a maximum of 50 synonyms
   - The total number of words for all synonyms of a single term cannot exceed 100
-  - Queries can now contain a maximum of 1000 words. This this change only impacts queries containing very long phrases. Search terms (words not inside a phrase, and individual phrases) remain limited to 10 per query
+  - Queries can now contain a maximum of 1000 words. This change only impacts queries containing very long phrases. Search terms (words not inside a phrase, and individual phrases) remain limited to 10 per query
 - Geo search improvements:
   - Increased performance when geosorting small sets of documents
   - Descending sort is now as performant as ascending sort
@@ -122,8 +122,8 @@ Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 - The `exactness` ranking rule no longer treats synonyms as exact matches. This boosts documents containing the query exactly as typed by the user. Solves https://github.com/meilisearch/meilisearch/issues/3410
 - When using the `attributes`, `exactness`, `typo`, and `proximity` ranking rules, Meilisearch will sort results as if  the`words` ranking rule were present and with higher priority. Search behavior when using the specified ranking rules before or without `words` was confusing and hurt relevancy
 - Split words are now also treated as possible digrams. This means the query `whit ehorse` may match documents containing `white horse`, which improves the relevancy of typo tolerance
-- ngrams and split words are now disadvantaged in comparison to the exact word in the `typo` ranking rule.
-- The "iterative" version of ranking rules are now removed (https://github.com/meilisearch/meilisearch/issues/3356). The iterative version of algorithms would be applied depending on internal factors and would sometimes differ greatly in relevancy from the base ranking rule, leading to inconsistent relevancy.
+- N-grams and split words are now disadvantaged in comparison to the exact word in the `typo` ranking rule. This means that, e.g., a query for `sun flower` will now return a document titled `Sun Flower` before one titled `Sunflower`
+- The behavior of the ranking rules no longer depends on how many documents they have to rank, improving consistency in terms of both relevancy and latency. Solves https://github.com/meilisearch/meilisearch/issues/3356
 - Exactness will no longer prioritize documents containing exact words which have already been parsed and removed by the `words` ranking rule. For example, when using the query `Batman: the dark knight rises` with the default term matching strategy (`last`), documents with a title starting with `Batman: the dark knight` will be returned before documents containing additional terms like `Batman: the dark knight crashes`
 
 ## Automated task deletion
