--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -120,7 +120,7 @@ Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 ### Relevancy improvements
 
 - The `exactness` ranking rule no longer treats synonyms as exact matches. This boosts documents containing the query exactly as typed by the user. Solves https://github.com/meilisearch/meilisearch/issues/3410
-- When using the `attributes`, `exactness`, `typo`, and `proximity` ranking rules, Meilisearch will sort results as if  the`words` ranking rule were present and with higher priority. Search behavior when using the specified ranking rules before or without `words` was confusing and hurt relevancy
+- Meilisearch will always sort result as if the `words` ranking rule were present with a higher priority than the `attributes`, `exactness`, `typo` and `proximity` ranking rules, even if in the settings the `words` ranking rule has been removed or set with a lower priority. Search behavior when using the specified ranking rules before or without `words` was confusing and hurt relevancy
 - Split words are now also treated as possible digrams. This means the query `whit ehorse` may match documents containing `white horse`, which improves the relevancy of typo tolerance
 - N-grams and split words are now disadvantaged in comparison to the exact word in the `typo` ranking rule. This means that, e.g., a query for `sun flower` will now return a document titled `Sun Flower` before one titled `Sunflower`
 - The behavior of the ranking rules no longer depends on how many documents they have to rank, improving consistency in terms of both relevancy and latency. Solves https://github.com/meilisearch/meilisearch/issues/3356
