--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -177,10 +177,11 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
   * Add sprint issue to template issues (#3643) @curquiza
   * Update the prototype section in CONTRIBUTING.md (#3649) @curquiza
   * Update README to reference new docs website (#3666, #3710, #3718 and #3720) @guimachiavelli @roy9495 @Kerollmops @curquiza
+  * Move comments above keys in `config.toml` (#3731) @jirutka
 * Misc
   * Milli scope: when updating settings, check if primary key actually changes before throwing an error (#3608) @GregoryConrad
   * Remove unused snapshot files (#3696) @irevoire
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jlucktay, @roy9495, and @Sufflope.
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jirutka, @jlucktay, @roy9495, and @Sufflope.
 - [Charabia](https://github.com/meilisearch/charabia): @akeamc, @DrAliRagab, @goodhoko, and @mosuka.
