Update changelogs following rc1

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -144,13 +144,16 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
 
 ## Other improvements
 
+* Introduce experimental feature to reduce the RAM usage. Can be useful if Meilisearch is sometimes killed by your OS. [Check out this discussion](https://github.com/meilisearch/product/discussions/652) to get more information and how to use it (#3651) @Kerollmops
 * Add boolean support for CSV documents (#3576) @irevoire
 * Improve geosort errors during sorting and filtering (#3638 and #3631) @cymruu
+* Improve error message when payload is too large (#3739) @cymruu
 
 # Fixes 🐞
 
 * Improve the `GET /health` route by ensuring the internal DB is not down (#3647) @irevoire
 * Handle single quotation mark (`’`) and apostrophe (`'`) the same way (#3702) @ManyTheFish
+* Fix the sort error message: regression seen in v1.1 (#3749 and #3755) @ManyTheFish
 
 # Misc
 
@@ -178,6 +181,7 @@ Done by @ManyTheFish, @akeamc, @DrAliRagab, @goodhoko, and @mosuka in #3702 and 
 * Misc
   * Milli scope: when updating settings, check if primary key actually changes before throwing an error (#3608) @GregoryConrad
   * Remove unused snapshot files (#3696) @irevoire
+  * Add missing analytics (#3738) @irevoire
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @cymruu, @GregoryConrad, @inductor, @jirutka, @jlucktay, @roy9495, and @Sufflope.
