--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -1,9 +1,6 @@
 # v1.3.0 release changelogs
 
-<!-- The following line should NOT be put in the official release changelogs -->
-
-
-Meilisearch v1.3 introduces Meilisearch as a vector store, visible ranking score details and defining a field to search on at search time.  It also now includes the ability to search within facet values and facet values that are sortable.
+Meilisearch v1.3.0 introduces Meilisearch as a vector store, it introduces visible ranking score details and defining a field to search on at search time.  It also now includes the ability to search within facet values and facet values that are sortable.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -13,7 +10,7 @@ Some SDKs might not include all new features—consult the project repository fo
 # New features and improvements 🔥
 
 ## Vector Store
-The release of v1.3 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts vectors in documents, stores them, and lets users retrieve the nearest documents using the search endpoint.
+The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts vectors in documents, stores them, and lets users retrieve the nearest documents using the search endpoint.
 
 ### Sending Vectorized Documents
 
