added enable experimental endpoint

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -9,8 +9,19 @@ Some SDKs might not include all new features—consult the project repository fo
 
 # New features and improvements 🔥
 
-## Vector Store
+## Vector Store - Experimental
 The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts vectors in documents, stores them, and lets users retrieve the nearest documents using the search endpoint.
+
+This experimental feature can be enabled at runtime using our new `/experimental-features` endpoint.
+```bash
+❯ curl \
+  -X PATCH 'http://localhost:7700/experimental-features/' \
+  -H 'Content-Type: application/json'  \
+--data-binary '{
+    "vectorSearch": true
+  }'
+
+```
 
 ### Sending Vectorized Documents
 
@@ -57,11 +68,6 @@ As part of v1.3.0 we will return a similarlity score as part of the documents re
 }
 ```
 
-TBD - should this be with the new endpoint instead??
-When launching Meilisearch, use the following flag:
-```bash
-meilisearch --experimental-score-details
-```
 
 🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/621).
 
@@ -114,9 +120,15 @@ Additionally, as an experimental feature, you can view detailed scoring per rank
 
 ⚠️ While the `_rankingScore` is stable in v1.3.0 the `_rankingScoreDetails` are being released as an experimental feature. They are expected to be stabilized in v.1.4.0.
 
-When launching Meilisearch, use the following flag:
+This experimental feature can be turned on at runtime using our new `/experimental-features` endpoint.
 ```bash
-meilisearch --experimental-score-details
+❯ curl \
+  -X PATCH 'http://localhost:7700/experimental-features/' \
+  -H 'Content-Type: application/json'  \
+--data-binary '{
+    "scoreDetails": true
+  }'
+
 ```
 
 🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/594).
