restructured the experimental part of scoring

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -76,15 +76,17 @@ As part of v1.3.0 we will return a similarlity score as part of the documents re
 Done by @Kerollmops in #3825
 
 
-## Display ranking details at search
+## Display ranking scores at search
 
-Meilisearch v1.3.0 introduces score details per document via the `showRankingScore` search query parameter. With this in place each document will return with a `_rankingScore` property displaying a score between 0 and 1. The higher the ranking score, the more relevant the document.
+Meilisearch v1.3.0 introduces ranking scores per document via the `showRankingScore` search query parameter. With this in place each document will return with a `_rankingScore` property displaying a score between 0 and 1. The higher the ranking score, the more relevant the document.
 
 ```json 
 "_rankingScore": 0.8575757575757575,
 ```
 
-Additionally, as an experimental feature, you can view detailed scoring per ranking rule for each document via the `showRankingScoreDetails` search query parameter. With this in place each document will return with a `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
+### Ranking score details - Experimental 
+
+Additionally, as an experimental feature, you can view detailed scores per ranking rule for each document via the `showRankingScoreDetails` search query parameter. With this in place each document will return with a `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
 
 ```json 
 "_rankingScoreDetails": {
@@ -117,8 +119,6 @@ Additionally, as an experimental feature, you can view detailed scoring per rank
                 }
             }
 ```
-
-⚠️ While the `_rankingScore` is stable in v1.3.0 the `_rankingScoreDetails` are being released as an experimental feature. They are expected to be stabilized in v.1.4.0.
 
 This experimental feature can be turned on at runtime using our new `/experimental-features` endpoint.
 ```bash
