typo fix, moving issues and adding small detail

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -50,7 +50,7 @@ curl -X POST -H 'content-type: application/json' \
 ```
 
 ### Similarity score
-As part of v1.3.0 we will return a similarlity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticSimilarity` property. The higher the ranking score, the more similar the document.
+As part of v1.3.0 we will return a similarity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticSimilarity` property. The higher the ranking score, the more similar the document.
 
 ```json
 {
@@ -185,7 +185,6 @@ Done by @Kerollmops in (#3612)
 ### Performance improvements
 
 * Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
-* Remove the `docid_word_positions` database (#3819) @loiclec
 
 
 
@@ -194,8 +193,8 @@ Done by @Kerollmops in (#3612)
 * TBD charabia changes to be included
 
 ## Other improvements
-* Improve the metrics (#3789) @irevoire
-
+* Improve the metrics. Make the metrics easier to use and provides info on the task queue. (#3789) @irevoire
+* Remove the `docid_word_positions` database. Reduces the index size. (#3819) @loiclec
 
 # Fixes 🐞
 
@@ -206,9 +205,9 @@ Done by @Kerollmops in (#3612)
 
 
 * Dependencies upgrade
-  * Bump actions/setup-go from 3 to 4 (#3805) @dependabot
-  * Bump Swatinem/rust-cache from 2.2.1 to 2.4.0 (#3803) @dependabot 
-  * Bump svenstaro/upload-release-action from 2.5.0 to 2.6.1 (#3804) @dependabot
+  * Bump actions/setup-go from 3 to 4 (#3805)
+  * Bump Swatinem/rust-cache from 2.2.1 to 2.4.0 (#3803)
+  * Bump svenstaro/upload-release-action from 2.5.0 to 2.6.1 (#3804)
 
 
 * CIs and tests
